--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ src/configuration.cpp
 src/game.cpp
 src/main.cpp
 src/world.cpp
+src/player.cpp
 )
 target_include_directories(main PRIVATE 
     ${CMAKE_SOURCE_DIR}/include
